--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,17 +19,43 @@
       <img id="jojogotchi" class="jojogotchi-img" [src]="getJojoGotchiImgSrc()">
     </div>
     <div class="bottom-buttons">
-      <button (touchstart)='feedJojoGotchi()' (click)='feedJojoGotchi()'><img class="icon-btn" src="./assets/images/icons8pouletkfc32.png"></button>
+      <button (touchstart)='feedJojoGotchi()' (click)='feedJojoGotchi()'><img class="icon-btn" src="./assets/images/icons8-poulet-kfc-64.png"></button>
       <button (touchstart)='bedJojoGotchi()' (click)='bedJojoGotchi()'><img class="icon-btn" src="./assets/images/icons8dormirdanslelit32.svg"></button>
       <button (touchstart)="showWindow()" (click)="showWindow()"><img class="icon-btn" src="./assets/images/icons8demanderunservice32.svg"></button>
     </div>
   </div>
   <div class="panel-2-buttons" *ngIf='isWindowDisplayed'>
-    <button class="secondary-button"><img class="icon-btn" src="./assets/images/icons8machineàlaver32.svg"><span>Faire la vaiselle</span></button>
-      <button class="secondary-button"><img class="icon-btn" src="./assets/images/icons8babyyoda32.svg"><span>Baby Yoda</span></button>
-      <button class="secondary-button"><img class="icon-btn" src="./assets/images/icons8livreouvert32.svg"><span>Raconter une histoire</span></button>
-      <button class="secondary-button"><img class="icon-btn" src="./assets/images/icons8-pays-australie-32.svg"><span>Australie</span></button>
-      <button class="secondary-button" (touchstart)="closeWindow()" (click)="closeWindow()"><img class="icon-btn" src="./assets/images/icons8-fermer-la-fenêtre-32.png"><span>Fermer</span></button>
+    <button class="secondary-button" (click)="showVaiselle()" (touchstart)="showVaiselle()"><img class="panel-2-icon-btn" src="./assets/images/icons8machineàlaver32.svg"><div class="panel-2-button-text">Faire la vaiselle</div></button>
+      <button class="secondary-button" (click)="showBabyYoda()" (touchstart)="showBabyYoda()"><img class="panel-2-icon-btn" src="./assets/images/icons8babyyoda32.svg"><div class="panel-2-button-text">Baby Yoda</div></button>
+      <button class="secondary-button" (click)="showStory()" (touchstart)="showStory()"><img class="panel-2-icon-btn" src="./assets/images/icons8livreouvert32.svg"><div class="panel-2-button-text">Il était une fois</div></button>
+      <button class="secondary-button" (click)="showAustraly()" (touchstart)="showAustraly()"><img class="panel-2-icon-btn" src="./assets/images/icons8-pays-australie-32.svg"><div class="panel-2-button-text">Australie</div></button>
+      <button class="secondary-button" (touchstart)="closeWindow()" (click)="closeWindow()"><img class="panel-2-icon-btn" src="./assets/images/icons8-fermer-la-fenêtre-100.png"><div class="panel-2-button-text">Fermer</div></button>
+  </div>
+  <div class="sub-panel vaiselle" *ngIf="this.displayVaiselle">
+    <div class="vaiselle-text">
+      {{this.vaiselleResponse}}
+    </div>
+    <button class="sub-panel-button btn-vaiselle" (click)="hideVaiselle()" (touchstart)="hideVaiselle()">Fermer</button>
+  </div>
+  <div class="sub-panel baby-yoda" *ngIf="this.displayBabyYoda">
+    <img class="gif" src="https://media.giphy.com/media/Ken6Yg5n7bYStW4JYB/giphy.gif" (mouseover)="$event.stopPropagation()">
+    <button class="sub-panel-button btn-baby-yoda" (click)="hideBabyYoda()" (touchstart)="hideBabyYoda()">Fermer</button>
+  </div>
+  <div class="sub-panel story" *ngIf="this.displayStory">
+    <div class="story-text">
+      {{getStoryWording(this.storyPart)}}
+      <img *ngIf="this.showStoryIllustration(this.storyPart)" class="story-illustration" src="./assets/images/storypicture.png">
+    </div>
+    <div class="nav-story-buttons">
+      <button class="sub-panel-button" (click)="onPreviousStoryPart()" (touchstart)="onPreviousStoryPart()">Precedent</button>
+      <button class="sub-panel-button" (click)="onNextStoryPart()" (touchstart)="onNextStoryPart()">Suivant</button>
+    </div>
+    <button class="sub-panel-button btn-story" (click)="hideStory()" (touchstart)="hideStory()">Fermer</button>
+  </div>
+  <div class="sub-panel australy" *ngIf="this.displayAustraly">
+    <img class="brisbane" src="./assets/images/Brisbane.jpg">
+    <div class="brisbane-legend">Brisbane, Australia</div>
+    <button class="sub-panel-button btn-australy" (click)="hideAustraly()" (touchstart)="hideAustraly()">Fermer</button>
   </div>
   <audio autoplay loop [src]="getAudioBackground()"></audio>
 </html>
