--- a/mobile/platforms/android/app/src/main/res/xml/config.xml
+++ b/mobile/platforms/android/app/src/main/res/xml/config.xml
@@ -39,4 +39,8 @@
     <preference name="loglevel" value="DEBUG" />
     <preference name="Fullscreen" value="true" />
     <preference name="Orientation" value="portrait" />
+    <feature name="SplashScreen">
+        <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
+        <param name="onload" value="true" />
+    </feature>
 </widget>
